# drf_pr

./: .env.sample  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
learning/: admin.py  models.py  paginators.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
learning/migrations/: 0001_initial.py  0002_alter_course_preview.py  0003_alter_lesson_preview.py  0003_course_owner_lesson_owner_alter_course_preview.py  0004_merge_20240918_0820.py  0005_alter_course_preview.py  0006_alter_lesson_video_url.py  0007_subscription.py  0008_alter_course_owner_alter_lesson_owner.py  0009_course_updated_at.py
users/: admin.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: create_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id.py
